[project]
name = "demo-pytorch-dl-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "safetensors>=0.6.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "kagglehub[pandas-datasets]>=0.3.13",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]
